--- a/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-in.vm
+++ b/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-in.vm
@@ -33,6 +33,36 @@
 								</select>
 							</div>
 						</div>
+						<div class="form-group mno">
+							<label for="inputEmail3" class="col-sm-2 control-label" style="text-align:left;">货架位置</label>
+							<div class="col-sm-8">
+								<select name="location" id="location"  class="form-control" placeholder="货架位置">
+									<option value="R1"  selected >R1</option>
+									<option value="R2"   >R2</option>
+									<option value="R3"   >R3</option>
+									<option value="R4"   >R4</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group mno">
+							<label for="inputEmail3" class="col-sm-2 control-label" style="text-align:left;">产品名称</label>
+							<div class="col-sm-8">
+								<input type="text" name="name" id="name" class="form-control" datatype="*"/>
+							</div>
+						</div>
+						<div class="form-group mno">
+							<label for="inputEmail3" class="col-sm-2 control-label" style="text-align:left;">产品规格</label>
+							<div class="col-sm-8">
+								<input type="text" name="model" id="model" class="form-control" datatype="*"/>
+							</div>
+						</div>
+						
+						<div class="form-group mno">
+							<label for="inputEmail3" class="col-sm-2 control-label" style="text-align:left;">品牌</label>
+							<div class="col-sm-8">
+								<input type="text" name="brand" id="brand" class="form-control" datatype="*"/>
+							</div>
+						</div>
 						<div id="form-group mno">
 								<legend  class="col-sm-offset-1 col-sm-6">
 									<button type="button" class="btn btn-primary" onclick="toInStart();" >开始入库扫描</button>
@@ -60,7 +90,11 @@
 	function toInStart() {
 		var antenna=jQuery("#antenna").val();
 		var columnId=jQuery("#pId").val();
-		doUrl('$!{basePath}/p3/cms/erpProduct.do?toInStart&antenna='+antenna+'&columnId='+columnId);
+		var location=jQuery("#location").val();
+		var brand=jQuery("#brand").val();
+		var model=jQuery("#model").val();
+		var name=jQuery("#name").val();
+		doUrl('$!{basePath}/p3/cms/erpProduct.do?toInStart&antenna='+antenna+'&columnId='+columnId+'&location='+location+'&brand='+brand+'&model='+model+'&name='+name);
     }
     
     
