--- a/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-list.vm
+++ b/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-list.vm
@@ -27,9 +27,15 @@
 								</div>
 								
 								<div class="form-group col-sm-3">
-									<label for="location" class="control-label col-sm-3 line34">产品位置</label>
+									<label for="location" class="control-label col-sm-3 line34">货架位置</label>
 									<div class="col-sm-8">
-										<input type="text" name="location" id="location" value="$!{erpProduct.location}" class="form-control" />
+									<select name="location" id="location"  class="form-control" placeholder="货架位置">
+									<option value=""  selected ></option>									
+									<option value="R1"   >R1</option>
+									<option value="R2"   >R2</option>
+									<option value="R3"   >R3</option>
+									<option value="R4"   >R4</option>
+								</select>
 									</div>
 								</div>
 								<div class="form-group col-sm-3">
