去掉调整侧边栏宽度的按钮

--- a/jeecg-p3-biz-cms/src/main/resources/content/cms/main/index.vm
+++ b/jeecg-p3-biz-cms/src/main/resources/content/cms/main/index.vm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
 
-    <title>JEECG-CMS系统</title>
+    <title>ERP系统</title>
 
     <meta name="keywords" content="ERP">
     <meta name="description" content="ERP是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
