--- a/jeecg-p3-biz-cms/src/main/resources/content/cms/main/right.vm
+++ b/jeecg-p3-biz-cms/src/main/resources/content/cms/main/right.vm
@@ -1,7 +1,7 @@
 <div id="page-wrapper" class="gray-bg dashbard-1">
     <div class="row border-bottom">
         <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header" style="height: 60px;"><a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+            <div class="navbar-header" style="height: 60px;"><a class="" href="#"> </a>
                 <form role="search" class="navbar-form-custom" method="post" action="search_results.html" style="width: 250px;">
                     <div class="form-group">
                         <input type="text" placeholder="欢迎使用erp仓库管理系统" class="form-control" name="top-search" id="top-search">
