--- a/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-inStart.vm
+++ b/jeecg-p3-biz-cms/src/main/resources/content/cms/erpProduct-inStart.vm
@@ -22,6 +22,7 @@
 								<input type="hidden" id="location" name="location" value="$!{location}" />
 								<input type="hidden" id="brand" name="brand" value="$!{brand}" />
 								<input type="hidden" id="model" name="model" value="$!{model}" />
+								<input type="hidden" id="name" name="name" value="$!{name}" />
 								<span>$!{status}</span>
 							</div>
 						</div>
